# rag-qa

./: .env.example  .gitignore  .tool-versions  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
notebooks/: example.ipynb  retrieval.ipynb
src/: utils.py
tests/: test_smoke.py  test_utils.py
