[tool.poetry]
name = "rag-qa"
version = "0.1.0"
description = "A containerised QA framework to ask questions to your documents."
authors = ["Ruan Pretorius"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
