[tool.poetry]
name = "rag-qa"
version = "0.1.0"
description = "A containerised QA framework to ask questions to your documents."
authors = ["Ruan Pretorius"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
langchain = "^0.1.0"
streamlit = "^1.30.0"
requests = "^2.31.0"
langchain-community = "^0.0.12"
chromadb = "^0.4.22"
bs4 = "^0.0.1"
langchainhub = "^0.1.14"
langchain-openai = "^0.0.2.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
